[workspace]
members = [
 "backfill",
 "discv5",
 "in-memory-state",
 "minimal",
 "oracle",
 "op-bridge", 
 "remote",
 "rollup",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
# reth
reth = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.10" }
reth-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.10", features = ["full"] }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.10" }
reth-ethereum-cli = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.10" }
reth-discv5 = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.10" }
reth-execution-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.10" }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.10" }
reth-exex = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.10", features = ["serde"] }
reth-eth-wire = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.10" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.10" }
reth-network = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.10", features = ["test-utils"] }
reth-network-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.10" }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.10" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.10" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.10" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.10" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.10" }
reth-revm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.10" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.10" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.10" }

# alloy
alloy-eips = { version = "0.14", default-features = false }
alloy-genesis = { version = "0.14", default-features = false }
alloy-consensus = { version = "0.14", default-features = false }
alloy-rlp = "0.3.4"
alloy-rpc-types = { version = "0.14", features = [
    "eth",
], default-features = false }
alloy-signer = { version = "0.14", default-features = false }
alloy-signer-local = { version = "0.14", default-features = false }

alloy-primitives = { version = "1.0", default-features = false }
alloy-sol-types  = { version = "1.0", features = ["json"] }
foundry-blob-explorers = "0.13"

discv5 = "0.9"
enr = "0.13"
secp256k1 = { version = "0.30", default-features = false, features = [
 "global-context", "std", "recovery",
] }

# async
futures = "0.3"
futures-util = "0.3"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }

# serde
serde = "1"
serde_json = "1"

# misc
eyre = "0.6"
rand = "0.9"

# testing
reth-exex-test-utils = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.10" }
reth-testing-utils = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.10" }


#[patch.crates-io]
#revm-inspectors = { git = "https://github.com/paradigmxyz/revm-inspectors", rev = "667180b" }