[package]
name = "daimo-names-exex"
version = "0.0.0"
publish = false
edition.workspace = true
license.workspace = true

[dependencies]
reth.workspace = true
reth-exex.workspace = true
reth-node-api.workspace = true
reth-node-ethereum.workspace = true
reth-primitives.workspace = true
reth-execution-types.workspace = true
reth-tracing.workspace = true

eyre.workspace = true
futures.workspace = true
alloy-sol-types.workspace = true
tokio-postgres = "0.7.11"

[dev-dependencies]
reth-exex-test-utils.workspace = true
reth-testing-utils.workspace = true

tokio.workspace = true
rand = "0.8"
tempfile = "3"
