[package]
name = "discv5"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
# reth
reth-chainspec.workspace = true
reth-discv5.workspace = true
reth-exex.workspace = true
reth-network-peers.workspace = true
reth-node-api.workspace = true
reth-node-ethereum.workspace = true
reth-tracing.workspace = true
reth.workspace = true

# networking
discv5 = "0.6"
enr = "0.12"

# async
futures-util.workspace = true
futures.workspace = true
tokio-stream.workspace = true
tokio.workspace = true

# misc
clap = "4" 
eyre.workspace = true

[dev-dependencies]
reth-exex-test-utils.workspace = true
reth-testing-utils.workspace = true
