[package]
name = "in-memory-state"
version = "0.0.0"
publish = false
edition.workspace = true
license.workspace = true

[dependencies]
reth-ethereum.workspace = true
reth-exex.workspace = true
reth-node-api.workspace = true
reth-node-ethereum.workspace = true
reth-tracing.workspace = true
reth-execution-types.workspace = true

alloy-consensus.workspace = true
eyre.workspace = true
futures-util.workspace = true

[dev-dependencies]
reth-exex-test-utils.workspace = true
reth-testing-utils.workspace = true

tokio.workspace = true
