[package]
name = "kona"
version = "0.1.0"
publish = false
edition.workspace = true
license.workspace = true

[dependencies]
# kona
kona-derive = { git = "https://github.com/ethereum-optimism/kona", rev = "4ef271b", features = ["online", "serde"] }
superchain-registry = { version = "0.2.2", default-features = false }

# needed for compatibility with kona's ChainProvider trait
anyhow = { version = "1.0.86", default-features = false }

# reth
reth.workspace = true
reth-exex.workspace = true
reth-node-api.workspace = true
reth-node-ethereum.workspace = true

# alloy
alloy = { version = "0.2", features = ["full"] }
alloy-rlp = "0.3.4"

# other
clap = "4" 
tracing = "0.1.40"
async-trait = "0.1.81"
reqwest = "0.12.5"
serde_json = "1.0.120"
parking_lot = "0.12.3"
eyre.workspace = true

[dev-dependencies]
reth-exex-test-utils.workspace = true
reth-testing-utils.workspace = true

tokio.workspace = true
