[package]
name = "op-bridge"
version = "0.0.0"
publish = false
edition.workspace = true
license.workspace = true

[dependencies]
# reth
reth-execution-types.workspace = true
reth-exex.workspace = true
reth-node-api.workspace = true
reth-node-ethereum.workspace = true
reth-primitives.workspace = true
reth-tracing.workspace = true
reth.workspace = true

# alloy
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
alloy-eips.workspace = true

# misc
eyre.workspace = true
futures.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }
tokio.workspace = true

[dev-dependencies]
# reth
reth-exex-test-utils.workspace = true
reth-testing-utils.workspace = true

# alloy
alloy-consensus.workspace = true

tokio.workspace = true
rand = "0.8"
tempfile = "3"
