[package]
name = "oracle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]

# reth
reth-discv5.workspace = true
reth-eth-wire.workspace = true
reth-exex.workspace = true
reth-network-api.workspace = true
reth-network-peers.workspace = true
reth-network.workspace = true
reth-node-api.workspace = true
reth-node-ethereum.workspace = true
reth-primitives.workspace = true
reth-rpc-types.workspace = true
reth-tracing.workspace = true
reth.workspace = true

alloy-signer-local = "0.3"
alloy-signer = "0.3"
alloy-rlp = "0.3"

# networking
discv5 = "0.7"
enr = "0.12"

# async
futures.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-tungstenite = "0.23"


thiserror = "1"

# misc
clap = "4" 
eyre.workspace = true
serde = "1"
serde_json = "1"
