[package]
name = "oracle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
# reth
reth-discv5.workspace = true
reth-eth-wire.workspace = true
reth-exex.workspace = true
reth-network-api.workspace = true
reth-network-peers.workspace = true
reth-network.workspace = true
reth-node-api.workspace = true
reth-node-ethereum.workspace = true
reth-primitives.workspace = true
reth-tracing.workspace = true
reth.workspace = true

# alloy
alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-rpc-types.workspace = true
alloy-signer-local.workspace = true
alloy-signer.workspace = true

# networking
discv5.workspace = true
enr = "0.12"

# async
futures.workspace = true
tokio-stream.workspace = true
tokio-tungstenite = "0.23"
tokio.workspace = true

# misc
clap = "4" 
eyre.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror = "1"
uuid = "1.10.0"

[dev-dependencies]
reth-exex-test-utils = { git = "https://github.com/paradigmxyz/reth" }
reth-testing-utils = { git = "https://github.com/paradigmxyz/reth" }
