[package]
name = "oracle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
# reth
reth-discv5.workspace = true
reth-eth-wire.workspace = true
reth-exex.workspace = true
reth-network-api.workspace = true
reth-network-peers.workspace = true
reth-network.workspace = true
reth-node-api.workspace = true
reth-node-ethereum.workspace = true
reth-primitives.workspace = true
reth-tracing.workspace = true
reth-ethereum.workspace = true

# alloy
alloy-primitives = { workspace = true, features = ["rlp"] }
alloy-consensus.workspace = true
alloy-rlp.workspace = true
alloy-rpc-types.workspace = true
alloy-signer-local.workspace = true
alloy-signer.workspace = true

# networking
discv5.workspace = true
enr.workspace = true

# async
futures.workspace = true
tokio-stream.workspace = true
tokio-tungstenite.workspace = true
tokio.workspace = true


# misc
clap = "4" 
eyre.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid = "1.10.0"
rand = "0.8.5"
thiserror = "1"

[dev-dependencies]
reth-exex-test-utils.workspace = true
reth-testing-utils.workspace = true
