[package]
name = "remote"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
reth.workspace = true
reth-exex.workspace = true
reth-node-api.workspace = true
reth-node-ethereum.workspace = true
reth-tracing.workspace = true

eyre.workspace = true

tonic = "0.12"
prost = "0.13"
tokio.workspace = true
tokio-stream = "0.1"

bincode = "1.3"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
reth-exex-test-utils.workspace = true

[features]
default = []
optimism = ["reth/optimism"]

[[bin]]
name = "remote-exex"
path = "bin/exex.rs"

[[bin]]
name = "remote-consumer"
path = "bin/consumer.rs"
