[package]
name = "remote"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
# reth
reth-exex.workspace = true
reth-node-api.workspace = true
reth-node-ethereum.workspace = true
reth-tracing.workspace = true
reth.workspace = true

# alloy
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-primitives.workspace = true

eyre.workspace = true
prost = "0.13"
tokio-stream = "0.1"
tokio.workspace = true
tonic = "0.12"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
reth-exex-test-utils.workspace = true

[features]
default = []
optimism = []

[[bin]]
name = "remote-exex"
path = "bin/exex.rs"

[[bin]]
name = "remote-consumer"
path = "bin/consumer.rs"
